# poc-sartor-full-workflow

./: .env.example  .gitignore  project_architecture.md  project_roadmap.md  pyproject.toml
agents/: __init__.py
agents/common/: __init__.py  agent_utils.py  prompts_common.py
agents/concept/: __init__.py  agent.py  prompts.py
agents/copy/: __init__.py  agent.py  prompts.py
agents/design/: __init__.py  agent.py  prompts.py
agents/segmentation/: __init__.py  agent.py  prompts.py
agents/strategy/: __init__.py  agent.py  prompts.py
assets/fonts/: README.md
data/samples/: dtc_product.json  multi_brand_retailer.json  tc01_electronics_premium.json  tc02_skincare_luxury.json  tc03_fashion_streetwear.json  tc04_home_artisanal.json  tc05_tech_massmarket.json
docs/: gemini_available_models.md  iteration_log.md  test_results.md
output/e2e_tests/tc01_electronics_premium/: run_summary_tc01_ele.json
output/e2e_tests/tc02_skincare_luxury/: run_summary_tc02_ski.json
output/phase7/tc01/: run_summary_tc01_p7.json
scripts/: list_available_models.py  test_api_direct.py
src/: __init__.py  checkpoints.py  config.py  graph.py  runner.py  state.py
src/composition/: __init__.py  compositor.py  product_placer.py  text_renderer.py
src/models/: __init__.py  assets.py  brand.py  channel.py  concept.py  copy.py  icp.py  product.py  store.py  strategy.py
src/utils/: __init__.py  image_utils.py  llm_factory.py
tests/: __init__.py  conftest.py  test_agents.py  test_composition.py  test_models.py
tests/e2e/: __init__.py  conftest.py  test_e2e_pipeline.py  validators.py
(+8 files in other folders)
